--- a/ejerico/concept_scheme_entity_mapping.json
+++ b/ejerico/concept_scheme_entity_mapping.json
@@ -1,1 +1,12 @@
-{"classes": {}, "properties": {"alt_label": "SKOS:altLabel", "definition": "SKOS:definition", "hidden_label": "SKOS:hiddenLabel", "notation": "SKOS:notation", "pref_label": "SKOS:prefLabel"}, "alias": {}}
+{
+    "classes": {},
+    "properties": {
+        "alt_label": "SKOS:altLabel",
+        "definition": "SKOS:definition",
+        "hidden_label": "SKOS:hiddenLabel",
+        "notation": "SKOS:notation",
+        "pref_label": "SKOS:prefLabel",
+        "has_top_concept": "SKOS:hasTopConcept"
+    },
+    "alias": {}
+}
