--- a/ejerico/dataset_entity_mapping.json
+++ b/ejerico/dataset_entity_mapping.json
@@ -7,9 +7,10 @@
         "accessible": "DCT:type",
         "accrual_periodicity": "DCT:accrualPeriodicity",
         "dataset_id": "DCT:identifier",
+        "data_mode": "EJERICO:dataMode",
         "distribution": "DCAT:distribution",
         "feature_type": "DCT:type",
-        "institution": "SCHEMA:name",
+        "feature": "EJERICO:feature",
         "landing_page": "DCAT:landingPage",
         "project": "PROV:wasGeneratedBy",
         "resolution": "DCAT:temporalResolution",
@@ -18,5 +19,9 @@
         "user": "PROV:wasUsedBy",
         "processing_level": "EJERICO:processingLevel",
         "service": "DCAT:service"
+    },
+    "alias": {
+        "instritution": "name"
     }
+
 }
