--- a/ejerico/default_entity_mapping.json
+++ b/ejerico/default_entity_mapping.json
@@ -13,6 +13,7 @@
         "distribution": "DCAT:Distribution",
         "document": "SCHEMA:DigitalDocument",
         "equipment": "EJERICO:Equipment",
+        "entity": "SCHEMA:Thing",
         "facility": "EJERICO:Facility",
         "organization": "FOAF:Organization",
         "platform": "SOSA:Platform",
@@ -20,6 +21,7 @@
         "project": "FOAF:Project",
         "person": "FOAF:Person",
         "relation": "DCAT:Relationship",
+        "resource": "SCHEMA:CreativeWork",
         "spatial": "DCT:Location",
         "sensor": "SOSA:Sensor",
         "service": "SCHEMA:Service",
@@ -28,6 +30,8 @@
         "temporal": "DCT:PeriodOfTime",
         "vcard": "VCARD:Address",
         "variable": "SCHEMA:PropertyValue",
+        "webpage": "SCHEMA:WebPage",
+        "website": "SCHEMA:WebSite",
         "webservice": "SCHEMA:WebAPI"
     },
     "properties": {
@@ -64,6 +68,7 @@
         "accessmode": "SCHEMA:accessMode",
         "accessurl": "DCAT:accessURL",
         "alias": "ADMS:identifier",
+        "brand": "SCHEMA:brand",
         "author": "SCHEMA:author",
         "citation": "EJERICO:citation",
         "comment": "SCHEMA:comment",
@@ -84,15 +89,20 @@
         "fax": "SCHEMA:faxNumber",
         "filter": "EJERICO:filter",
         "format": "SCHEMA:fileFormat",
+        "gender": "SCHEMA:gender",
         "givenName": "SCHEMA:givenName",
         "id": "DCT:identifier",
         "identifier": "SCHEMA:identifier",
         "is_related_to": "SCHEMA:isRelatedTo",
+        "is_part_of": "SCHEMA:isPartOf",
         "issn": "SCHEMA:issn",
         "issued": "DCT:issued",
         "harvested_hash": "EJERICO:hash",
         "harvested_source": "EJERICO:source",
         "harvested_timestamp": "EJERICO:updated",
+        "harvested_process": "EJERICO:harvester",
+        "has_translation": "SCHEMA:workTranslation",
+        "is_translation_of": "SCHEMA:translationOfWork",
         "keywords": "SCHEMA:keywords",
         "knows": "FOAF:knows",
         "label": "RDFS:label",
@@ -111,7 +121,9 @@
         "page": "FOAF:page",
         "pages": "SCHEMA:numberOfPages",
         "parent": "EJERICO:memberOf",
+        "partner": "PROV:wasAssociatedWith",
         "period": "EJERICO:samplePeriod",
+        "permission": "SCHEMA:permissions",
         "phone": "SCHEMA:telephone",
         "produces": "SCHEMA:produces",
         "processing_level": "EJERICO:processingLevel",
@@ -121,19 +133,22 @@
         "published": "DCT:issued",
         "qualification": "SCHEMA:qualifications",
         "range": "EJERICO:range",
+        "rawID": "EJERICO:rawID",
         "resolution": "EJERICO:resolution",
-        "responsible": "PROV:wasAssociatedWith",
+        "responsible": "PROV:actedOnBehalfOf",
         "serial": "SCHEMA:serialNumber",
         "search_terms": "EJERICO:searchTerms",
         "size": "SCHEMA:size",
         "source": "EJERICO:source",
         "status": "SCHEMA:status",
         "start_date": "SCHEMA:startDate",
+        "subject_of": "SCHEMA:subject",
         "rigths": "DCT:rights",
         "text_value": "SCHEMA:textValue",
         "theme": "DCAT:themeTaxonomy",
         "title": "DCT:title",
         "type": "DCT:type",
+        "uid": "EJERICO:uid",
         "updated": "EJERICO:updated",
         "url": "SCHEMA:url",
         "version": "DCT:hasVersion",
