--- a/epos/default_entity_mapping.json
+++ b/epos/default_entity_mapping.json
@@ -1,138 +1,154 @@
 {
-	"classes": {
-		"api": "HYDRA:APIDocumentation",
-		"apioperation": "HYDRA:Operation",
-		"address": "SCHEMA:PostalAddress",
-		"catalog": "DCAT:Catalog",
-		"concept": "SKOS:Concept",
-		"conceptscheme": "SKOS:ConceptScheme",
-		"contactpoint": "SCHEMA:ContactPoint",
-		"dataset": "DCAT:Dataset",
-		"datasetvariable": "BODC:A05",
-		"distribution": "DCAT:Distribution",
-		"document": "SCHEMA:DigitalDocument",
-		"equipment":"EPOS:Equipment",
-		"facility": "EPOS:Facility",
-		"organization": "SCHEMA:Organization",
-		"platform": "SOSA:Platform",
-		"program": "SCHEMA:ProgramMembership",
-		"project": "FOAF:Project",
-		"person": "FOAF:Person",
-		"relation": "DCAT:Relationship",
-		"spatial": "DCT:Location",
-		"sensor": "SOSA:Sensor",
-		"service": "SCHEMA:Service",
-		"software": "SCHEMA:SoftwareApplication",
-		"softwaresource": "SCHEMA:SoftwareSourceCode",
-		"temporal": "DCT:PeriodOfTime",
-		"vcard": "VCARD:Address",
-		"variable": "SCHEMA:PropertyValue",
-		"webservice": "EPOS:WebService"
-	},
-	"properties": {
-		"api": "EPOS:hasApi",
-		"apioperation": "EPOS:hasApiOperation",
-		"address": "SCHEMA:address",
-		"catalog": "EPOS:hasCatalog",
-		"concept": "DCT:subject",
-		"conceptscheme": "EPOS:hasConceptScheme",
-		"contactpoint": "EPOS:hasContactPoint",
-		"dataset": "EPOS:hasDataset",
-		"datasetvariable": "EPOS:hasDatasetVariable",
-		"distribution": "SCHEMA:distribution",
-		"document": "EPOS:hasDocument",
-		"equipment":"EPOS:hasEquipment",
-		"facility":"EPOS:hasFacility",
-		"organization": "EPOS:hasOrganization",
-		"platform": "EPOS:hasPlatform",
-		"program": "SCHEMA:memberOf",
-		"project": "EPOS:hasProject",
-		"person": "EPOS:hasPerson",
-		"relation": "DCT:relation",
-		"spatial": "DCT:spatial",
-		"sensor": "EPOS:hasSensor",
-		"service": "EPOS:hasService",
-		"software": "PROV:wasDerivedFrom",
-		"softwaresource": "EPOS:hasSoftwareSource",
-		"temporal": "DCT:temporal",
-		"variable": "EPOS:hasVariable",
-		"vcard": "SCHEMA:contactPoint",
-		"webservice": "EPOS:hasWebService",
-		
-		"abstract": "EPOS:abstract",
-		"accessmode": "SCHEMA:accessMode",
-		"accessurl": "DCAT:accessURL",
-		"alias": "SCHEMA:identifier",
-		"author": "SCHEMA:author",
-		"citation": "EPOS:citation",
-		"comment": "SCHEMA:comment",
-		"conformsTo": "DCT:conformsTo",
-		"contact": "SCHEMA:contactPoint",
-		"contributor": "DCT:contributor",
-		"created": "DCT:created",
-		"creator": "DCT:creator",
-		"default_value": "SCHEMA:defaultValue",
-		"DOI": "EPOS:DOI",
-		"downloadurl": "DCAT:downloadURL",
-		"editor": "SCHEMA:editor",
-		"end_date": "SCHEMA:endDate",
-		"equipmenttype": "EPOS:equipmentType",
-		"email": "SCHEMA:email",
-		"familyname": "SCHEMA:familyName",
-		"filter": "EPOS:filter",
-		"format": "SCHEMA:fileFormat",
-		"givenName": "SCHEMA:givenName",
-		"id": "DCT:identifier",
-		"identifier": "SCHEMA:identifier",
-		"is_related_to": "SCHEMA:isRelatedTo",
-		"issn": "SCHEMA:issn",
-		"issued": "DCT:issued",
-		"harvested_hash": "EPOS:hash",
-		"harvested_source": "EPOS:source",
-		"harvested_timestamp": "EPOS:updated",
-		"keywords": "SCHEMA:keywords",
-		"knows": "FOAF:knows",
-		"label": "RDFS:label",
-		"language": "DCT:language",
-		"license": "DCT:license",
-		"manufacturer": "SCHEMA:manufacturer",
-		"max_value": "SCHEMA:maxValue",
-		"mimetype": "SCHEMA:fileFormat",
-		"min_value": "SCHEMA:minValue",
-		"model": "SCHEMA:model",
-		"modified": "DCT:modified",
-		"name": "SCHEMA:name",
-		"nationality": "SCHEMA:nationality",
-		"operation": "HYDRA:supportedOperation",
-		"owner": "PROV:wasAttributedTo",
-		"orientation": "EPOS:orientation",
-		"page": "FOAF:page",
-		"pages": "SCHEMA:numberOfPages",
-		"parent": "EPOS:memberOf",
-		"period": "EPOS:samplePeriod",
-		"phone": "SCHEMA:telephone",
-		"processing_level": "EPOS:processingLevel",
-		"provenance": "DCT:ProvenanceStatement",
-		"provider": "SCHEMA:provider",
-		"publisher": "DCT:publisher",
-		"published": "DCT:issued",
-		"qualification": "SCHEMA:qualifications",
-		"range": "EPOS:range",
-		"resolution": "EPOS:resolution",
-		"responsible": "PROV:wasAssociatedWith",
-		"serial": "SCHEMA:serialNumber",
-		"size": "SCHEMA:size",
-		"source": "EPOS:source",
-		"status": "SCHEMA:status",
-		"start_date": "SCHEMA:startDate",
-		"rigths": "DCT:rights",
-		"text_value": "SCHEMA:textValue",
-		"theme": "DCAT:themeTaxonomy",
-		"title": "DCT:title",
-		"type": "DCT:type",	
-		"updated": "EPOS:updated",
-		"url": "SCHEMA:url",
-		"version": "DCT:hasVersion",
-		"visibility": "SCHEMA:hasDigitalDocumentPermission"
-	}
+    "classes": {
+        "api": "HYDRA:APIDocumentation",
+        "apioperation": "HYDRA:Operation",
+        "apioperationparameter": "HYDRA:IriTemplateMapping",
+        "address": "LOCN:Address",
+        "catalog": "DCAT:Catalog",
+        "concept": "SKOS:Concept",
+        "conceptscheme": "SKOS:ConceptScheme",
+        "contactpoint": "SCHEMA:ContactPoint",
+        "dataset": "DCAT:Dataset",
+        "datasetvariable": "BODC:A05",
+        "distribution": "DCAT:Distribution",
+        "document": "SCHEMA:DigitalDocument",
+        "equipment": "EPOS:Equipment",
+        "facility": "EPOS:Facility",
+        "organization": "FOAF:Organization",
+        "platform": "SOSA:Platform",
+        "program": "SCHEMA:ProgramMembership",
+        "project": "FOAF:Project",
+        "person": "FOAF:Person",
+        "relation": "DCAT:Relationship",
+        "spatial": "DCT:Location",
+        "sensor": "SOSA:Sensor",
+        "service": "SCHEMA:Service",
+        "software": "SCHEMA:SoftwareApplication",
+        "softwaresource": "SCHEMA:SoftwareSourceCode",
+        "temporal": "DCT:PeriodOfTime",
+        "vcard": "VCARD:Address",
+        "variable": "SCHEMA:PropertyValue",
+        "webpage": "SCHEMA:WebPage",
+        "website": "SCHEMA:WebSite",
+        "webservice": "SCHEMA:WebAPI"
+    },
+    "properties": {
+        "api": "HYDRA:apiDocumentation",
+        "apioperation": "EPOS:hasApiOperation",
+        "address": "EPOS:hasAddress",
+        "catalog": "EPOS:hasCatalog",
+        "concept": "DCT:subject",
+        "conceptscheme": "EPOS:hasConceptScheme",
+        "contactpoint": "EPOS:hasContactPoint",
+        "dataset": "EPOS:hasDataset",
+        "datasetvariable": "EPOS:hasDatasetVariable",
+        "distribution": "SCHEMA:distribution",
+        "document": "EPOS:hasDocument",
+        "entity": "SCHEMA:Thing",
+        "equipment": "EPOS:hasEquipment",
+        "facility": "EPOS:hasFacility",
+        "organization": "EPOS:hasOrganization",
+        "platform": "EPOS:hasPlatform",
+        "program": "SCHEMA:memberOf",
+        "project": "EPOS:hasProject",
+        "person": "EPOS:hasPerson",
+        "relation": "DCT:relation",
+        "resource": "SCHEMA:CreativeWork",
+        "spatial": "DCT:spatial",
+        "sensor": "EPOS:hasSensor",
+        "service": "EPOS:hasService",
+        "software": "PROV:wasDerivedFrom",
+        "softwaresource": "EPOS:hasSoftwareSource",
+        "temporal": "DCT:temporal",
+        "variable": "EPOS:hasVariable",
+        "vcard": "EPOS:hasVcard",
+        "webservice": "EPOS:hasWebService",
+
+        "abstract": "EPOS:abstract",
+        "accessmode": "SCHEMA:accessMode",
+        "accessurl": "DCAT:accessURL",
+        "alias": "ADMS:identifier",
+        "author": "SCHEMA:author",
+        "citation": "EPOS:citation",
+        "comment": "SCHEMA:comment",
+        "conformsTo": "DCT:conformsTo",
+        "contact": "SCHEMA:contactPoint",
+        "contributor": "DCT:contributor",
+        "created": "DCT:created",
+        "creator": "DCT:creator",
+        "default_value": "SCHEMA:defaultValue",
+        "description": "DCT:description",
+        "DOI": "EPOS:DOI",
+        "downloadurl": "DCAT:downloadURL",
+        "editor": "SCHEMA:editor",
+        "end_date": "SCHEMA:endDate",
+        "equipmenttype": "EPOS:equipmentType",
+        "email": "SCHEMA:email",
+        "familyName": "SCHEMA:familyName",
+        "fax": "SCHEMA:faxNumber",
+        "filter": "EPOS:filter",
+        "format": "SCHEMA:fileFormat",
+        "gender": "SCHEMA:gender",
+        "givenName": "SCHEMA:givenName",
+        "id": "DCT:identifier",
+        "identifier": "SCHEMA:identifier",
+        "is_part_to": "SCHEMA:isPartOf",
+        "is_related_of": "SCHEMA:isRelatedTo",
+        "issn": "SCHEMA:issn",
+        "issued": "DCT:issued",
+        "harvested_hash": "EPOS:hash",
+        "harvested_source": "EPOS:source",
+        "harvested_timestamp": "EPOS:updated",
+        "has_translation": "SCHEMA:workTranslation",
+        "is_translation_of": "SCHEMA:translationOfWork",
+        "keywords": "SCHEMA:keywords",
+        "knows": "FOAF:knows",
+        "label": "RDFS:label",
+        "language": "DCT:language",
+        "license": "DCT:license",
+        "manufacturer": "SCHEMA:manufacturer",
+        "max_value": "SCHEMA:maxValue",
+        "mimetype": "SCHEMA:fileFormat",
+        "min_value": "SCHEMA:minValue",
+        "model": "SCHEMA:model",
+        "modified": "DCT:modified",
+        "name": "SCHEMA:name",
+        "nationality": "SCHEMA:nationality",
+        "owner": "PROV:wasAttributedTo",
+        "orientation": "EPOS:orientation",
+        "page": "FOAF:page",
+        "pages": "SCHEMA:numberOfPages",
+        "parent": "EPOS:memberOf",
+        "partner": "PROV:wasAssociatedWith",
+        "period": "EPOS:samplePeriod",
+        "permission": "SCHEMA:permissions",
+        "phone": "SCHEMA:telephone",
+        "produces": "SCHEMA:produces",
+        "processing_level": "EPOS:processingLevel",
+        "provenance": "DCT:ProvenanceStatement",
+        "provider": "SCHEMA:provider",
+        "publisher": "DCT:publisher",
+        "published": "DCT:issued",
+        "qualification": "SCHEMA:qualifications",
+        "range": "EPOS:range",
+        "rawID": "EPOS:rawID",
+        "resolution": "EPOS:resolution",
+        "responsible": "PROV:wasAssociatedWith",
+        "serial": "SCHEMA:serialNumber",
+        "search_terms": "EPOS:searchTerms",
+        "size": "SCHEMA:size",
+        "source": "EPOS:source",
+        "status": "SCHEMA:status",
+        "start_date": "SCHEMA:startDate",
+        "subject_of": "SCHEMA:subject",
+        "rigths": "DCT:rights",
+        "text_value": "SCHEMA:textValue",
+        "theme": "DCAT:themeTaxonomy",
+        "title": "DCT:title",
+        "type": "DCT:type",
+        "updated": "EPOS:updated",
+        "url": "SCHEMA:url",
+        "version": "DCT:hasVersion",
+        "visibility": "SCHEMA:hasDigitalDocumentPermission"
+    }
 }
